[project]
name = "deep-learning"
version = "0.1.0"
description = "This repo is where my deep learning study projects will be stored in."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "yfinance>=0.2.65",
]
